Dexscreener - seems like to hard to scrape

--- a/Dextools/dextools_webscraping.ipynb
+++ b/Dextools/dextools_webscraping.ipynb
@@ -373,6 +373,25 @@
     "#print(test_elemnt.get_attribute(\"innerHTML\"))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Try to acces dexscreener.com data\n",
+    "url = 'https://dexscreener.com/arbitrum/0xc31e54c7a869b9fcbecc14363cf510d1c41fa443'\n",
+    "\n",
+    "options = Options()\n",
+    "#options.add_experimental_option(\"detach\", True)\n",
+    "\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()),\n",
+    "                          options=options)\n",
+    "\n",
+    "driver.get(url)\n",
+    "#time.sleep(5)"
+   ]
   }
  ],
  "metadata": {
