--- a/Dextools/first_look_on_prices.ipynb
+++ b/Dextools/first_look_on_prices.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -738,11 +739,94 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Doing basic plots for all 10 datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pair_list = [\n",
+    "            (\"SHIB-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0x811beed0119b4afce20d2583eb608c6f7af1954f\", 50),\n",
+    "            (\"HEX-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0x55d5c232d921b9eaa6b37b5845e439acd04b4dba\", 100),\n",
+    "            (\"AGIX-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0xe45b4a84e0ad24b8617a489d743c52b84b7acebe\", 40),\n",
+    "            (\"OPTIMUS-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0x8de7a9540e0edb617d78ca5a7c6cc18295fd8bb9\", 70),\n",
+    "            (\"SHIK-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0x0b9f5cef1ee41f8cccaa8c3b4c922ab406c980cc\", 60),\n",
+    "            (\"INJ-WBNB\", \"https://www.dextools.io/app/en/bnb/pair-explorer/0x1bdcebca3b93af70b58c41272aea2231754b23ca\", 60),\n",
+    "            (\"VOLT-WBNB\", \"https://www.dextools.io/app/en/bnb/pair-explorer/0x487bfe79c55ac32785c66774b597699e092d0cd9\", 200),\n",
+    "            (\"MBOX-WBNB\", \"https://www.dextools.io/app/en/bnb/pair-explorer/0x8fa59693458289914db0097f5f366d771b7a7c3f\", 90),\n",
+    "            (\"FLOKI-WBNB\", \"https://www.dextools.io/app/en/bnb/pair-explorer/0x231d9e7181e8479a8b40930961e93e7ed798542c\", 180),\n",
+    "            (\"BabyDoge-WBNB\", \"https://www.dextools.io/app/en/bnb/pair-explorer/0xc736ca3d9b1e90af4230bd8f9626528b3d4e0ee0\", 180)\n",
+    "            ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHIB-WETH\n",
+      "4756\n",
+      "2023-03-16 04:48:35 --- 2023-04-03 06:49:59 --- 18 days, 2:01:24 \n",
+      "\n",
+      "HEX-WETH\n",
+      "14546\n",
+      "2023-03-16 23:18:11 --- 2023-04-03 07:06:11 --- 17 days, 7:48:00 \n",
+      "\n",
+      "AGIX-WETH\n",
+      "3695\n",
+      "2023-03-15 11:46:35 --- 2023-04-03 07:07:47 --- 18 days, 19:21:12 \n",
+      "\n",
+      "OPTIMUS-WETH\n",
+      "8941\n",
+      "2023-03-17 01:28:35 --- 2023-04-03 07:14:11 --- 17 days, 5:45:36 \n",
+      "\n",
+      "SHIK-WETH\n",
+      "4312\n",
+      "2023-03-15 19:24:47 --- 2023-04-03 07:34:59 --- 18 days, 12:10:12 \n",
+      "\n",
+      "INJ-WBNB\n",
+      "7522\n",
+      "2023-03-16 05:14:40 --- 2023-04-03 07:29:04 --- 18 days, 2:14:24 \n",
+      "\n",
+      "VOLT-WBNB\n",
+      "18008\n",
+      "2023-03-17 23:00:46 --- 2023-04-03 07:54:26 --- 16 days, 8:53:40 \n",
+      "\n",
+      "MBOX-WBNB\n",
+      "12091\n",
+      "2023-03-18 12:57:24 --- 2023-04-03 08:09:12 --- 15 days, 19:11:48 \n",
+      "\n",
+      "FLOKI-WBNB\n",
+      "26367\n",
+      "2023-03-19 02:43:08 --- 2023-04-03 08:25:55 --- 15 days, 5:42:47 \n",
+      "\n",
+      "BabyDoge-WBNB\n",
+      "18443\n",
+      "2023-03-18 09:59:15 --- 2023-04-03 08:48:40 --- 15 days, 22:49:25 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pair in pair_list:\n",
+    "    name = pair[0]\n",
+    "    file_path = f\"D:/Dokumenty/Vejška/Magisterské studium/DIPLOMKA/Code_and_Data/Data_scraping/DEX_data_scraper/complete_data/{name}/{name}_complete.csv\"\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    print(name)\n",
+    "    print(len(df))\n",
+    "    print(df.datetime.iloc[-5], \"---\", df.datetime.iloc[0], \"---\",  datetime.strptime(df.datetime.iloc[0], '%Y-%m-%d %H:%M:%S') - datetime.strptime(df.datetime.iloc[-5], '%Y-%m-%d %H:%M:%S')    , \"\\n\") "
+   ]
   }
  ],
  "metadata": {
