JB and ADF tests on returns (Normal Dist and non-stationarity rejected)

--- a/Dextools/first_look_on_prices.ipynb
+++ b/Dextools/first_look_on_prices.ipynb
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,6 +775,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
+    "from scipy import stats\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
     "pair_list = [\n",
     "            (\"SHIB-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0x811beed0119b4afce20d2583eb608c6f7af1954f\", 50),\n",
@@ -792,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,64 +828,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plotting functions\n",
-    "#deprecated version\n",
-    "def plot_price(df, native=True, name=\"\"):\n",
-    "    # Choose the column to plot based on native argument\n",
-    "    if native:\n",
-    "        price_column = 'price_native'\n",
-    "        column_name = 'Price (native currency)'\n",
-    "    else:\n",
-    "        price_column = 'price_USD'\n",
-    "        column_name = 'Price (USD)'\n",
-    "    \n",
-    "    # Plot the chosen column as a timeseries\n",
-    "    df[price_column].plot(figsize=(12, 6))\n",
-    "    \n",
-    "    # Set the title, axis labels, and show the plot\n",
-    "    plt.title(f'{name} {column_name} Timeseries')\n",
-    "    plt.xlabel('Date')\n",
-    "    plt.ylabel(column_name)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#deprecated version\n",
-    "def plot_price(df, native=True, name=\"\", ax=None):\n",
-    "    # Choose the column to plot based on native argument\n",
-    "    if native:\n",
-    "        price_column = 'price_native'\n",
-    "        column_name = 'Price (native currency)'\n",
-    "    else:\n",
-    "        price_column = 'price_USD'\n",
-    "        column_name = 'Price (USD)'\n",
-    "    \n",
-    "    # Plot the chosen column as a timeseries\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "    df[price_column].plot(ax=ax)\n",
-    "    \n",
-    "    # Set the title, axis labels\n",
-    "    ax.set_title(f'{name} {column_name} Timeseries')\n",
-    "    ax.set_xlabel('Date')\n",
-    "    ax.set_ylabel(column_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#plotting function\n",
     "#current version\n",
     "def plot_price(df, native=True, name=\"\", ax=None, plot_both=False):\n",
     "    # Choose the column to plot based on native argument\n",
@@ -916,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,11 +896,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_returns(df, native=True, log=True, name = \"\", lower_percentile=0, higher_percentile=100, histogram = False, bins = 20):\n",
+    "def plot_returns(df, native=True, log=True, name = \"\", lower_percentile=0, higher_percentile=100, histogram = False, bins = 20, buy_only = False, sell_only = False):\n",
     "    \"\"\"\n",
     "    Plots the returns or log returns columns of a Pandas DataFrame.\n",
     "    \n",
@@ -977,8 +926,17 @@
     "    else:\n",
     "        ret_col = 'return_USD'\n",
     "        title = 'Simple Returns (USD)'\n",
-    "    \n",
-    "    title = name + \" \" + title\n",
+    "\n",
+    "    # Subset DataFrame based on \"buy_order\" column if specified\n",
+    "    if buy_only:\n",
+    "        df = df[df[\"buy_order\"] == True]\n",
+    "        title = name + \"BUYS \" + title\n",
+    "    elif sell_only:\n",
+    "        df = df[df[\"buy_order\"] == False]\n",
+    "        title = name + \"SELLS \" + title\n",
+    "    else:\n",
+    "        title = name + \" \" + title\n",
+    "\n",
     "    # Create the plot\n",
     "    fig, ax = plt.subplots(figsize=(12, 6))\n",
     "    plot_data = df[ret_col]\n",
@@ -1004,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1048,135 +1006,45 @@
      "output_type": "stream",
      "text": [
       "SHIB-WETH\n",
-      "Simple Returns (native currency)\n",
-      "-0.08302000300797119\n",
-      "0.01   -0.008649\n",
-      "0.05   -0.006283\n",
-      "0.25   -0.002895\n",
-      "0.50    0.000000\n",
-      "0.75    0.002412\n",
-      "0.95    0.006477\n",
-      "0.99    0.008960\n",
-      "Name: return_native, dtype: float64\n",
-      "0.0910731867410568 \n",
-      "\n",
+      "SignificanceResult(statistic=719606.0269227504, pvalue=0.0)\n",
+      "ADF Statistic: -29.745316\n",
+      "p-value: 0.000000\n",
       "HEX-WETH\n",
-      "Simple Returns (native currency)\n",
-      "-0.9834300439015079\n",
-      "0.01   -0.013717\n",
-      "0.05   -0.006312\n",
-      "0.25   -0.002545\n",
-      "0.50   -0.000432\n",
-      "0.75    0.002190\n",
-      "0.95    0.008268\n",
-      "0.99    0.015843\n",
-      "Name: return_native, dtype: float64\n",
-      "60.098951733671235 \n",
-      "\n",
+      "SignificanceResult(statistic=7029234075.62198, pvalue=0.0)\n",
+      "ADF Statistic: -19.030677\n",
+      "p-value: 0.000000\n",
       "AGIX-WETH\n",
-      "Simple Returns (native currency)\n",
-      "-0.2884522076661815\n",
-      "0.01   -0.016462\n",
-      "0.05   -0.008299\n",
-      "0.25   -0.004203\n",
-      "0.50   -0.000420\n",
-      "0.75    0.005206\n",
-      "0.95    0.009351\n",
-      "0.99    0.017504\n",
-      "Name: return_native, dtype: float64\n",
-      "0.39918533604887974 \n",
-      "\n",
+      "SignificanceResult(statistic=14307110.570194947, pvalue=0.0)\n",
+      "ADF Statistic: -26.833993\n",
+      "p-value: 0.000000\n",
       "OPTIMUS-WETH\n",
-      "Simple Returns (native currency)\n",
-      "-0.08761467889908259\n",
-      "0.01   -0.020463\n",
-      "0.05   -0.009717\n",
-      "0.25   -0.004014\n",
-      "0.50   -0.000423\n",
-      "0.75    0.004615\n",
-      "0.95    0.010403\n",
-      "0.99    0.019615\n",
-      "Name: return_native, dtype: float64\n",
-      "0.05567010309278353 \n",
-      "\n",
+      "SignificanceResult(statistic=59162.22517853667, pvalue=0.0)\n",
+      "ADF Statistic: -42.663275\n",
+      "p-value: 0.000000\n",
       "SHIK-WETH\n",
-      "Simple Returns (native currency)\n",
-      "-0.12405660377358485\n",
-      "0.01   -0.039273\n",
-      "0.05   -0.017800\n",
-      "0.25   -0.005374\n",
-      "0.50   -0.000701\n",
-      "0.75    0.006202\n",
-      "0.95    0.019826\n",
-      "0.99    0.038367\n",
-      "Name: return_native, dtype: float64\n",
-      "0.08439675174013916 \n",
-      "\n",
+      "SignificanceResult(statistic=15371.767533330227, pvalue=0.0)\n",
+      "ADF Statistic: -37.571611\n",
+      "p-value: 0.000000\n",
       "INJ-WBNB\n",
-      "Simple Returns (native currency)\n",
-      "-0.06607440310938373\n",
-      "0.01   -0.013181\n",
-      "0.05   -0.006221\n",
-      "0.25   -0.002933\n",
-      "0.50    0.000000\n",
-      "0.75    0.003015\n",
-      "0.95    0.006275\n",
-      "0.99    0.011541\n",
-      "Name: return_native, dtype: float64\n",
-      "0.07317073170731692 \n",
-      "\n",
+      "SignificanceResult(statistic=29854.806745397076, pvalue=0.0)\n",
+      "ADF Statistic: -27.550776\n",
+      "p-value: 0.000000\n",
       "VOLT-WBNB\n",
-      "Simple Returns (native currency)\n",
-      "-0.013608335105251945\n",
-      "0.01   -0.005972\n",
-      "0.05   -0.005505\n",
-      "0.25   -0.004280\n",
-      "0.50    0.000364\n",
-      "0.75    0.004228\n",
-      "0.95    0.005400\n",
-      "0.99    0.005909\n",
-      "Name: return_native, dtype: float64\n",
-      "0.04262877442273538 \n",
-      "\n",
+      "SignificanceResult(statistic=4.572853628674141, pvalue=0.10162895296185023)\n",
+      "ADF Statistic: -37.518985\n",
+      "p-value: 0.000000\n",
       "MBOX-WBNB\n",
-      "Simple Returns (native currency)\n",
-      "-0.009784735812133127\n",
-      "0.01   -0.005461\n",
-      "0.05   -0.005274\n",
-      "0.25    0.000000\n",
-      "0.50    0.000000\n",
-      "0.75    0.000000\n",
-      "0.95    0.005298\n",
-      "0.99    0.005498\n",
-      "Name: return_native, dtype: float64\n",
-      "0.008678237650200371 \n",
-      "\n",
+      "SignificanceResult(statistic=112.15447846893116, pvalue=4.425521348481029e-25)\n",
+      "ADF Statistic: -39.048517\n",
+      "p-value: 0.000000\n",
       "FLOKI-WBNB\n",
-      "Simple Returns (native currency)\n",
-      "-0.03333333333333344\n",
-      "0.01   -0.005660\n",
-      "0.05   -0.005217\n",
-      "0.25    0.000000\n",
-      "0.50    0.000000\n",
-      "0.75    0.000000\n",
-      "0.95    0.005217\n",
-      "0.99    0.005587\n",
-      "Name: return_native, dtype: float64\n",
-      "0.048484848484848575 \n",
-      "\n",
+      "SignificanceResult(statistic=185435461879.59375, pvalue=0.0)\n",
+      "ADF Statistic: -37.915477\n",
+      "p-value: 0.000000\n",
       "BabyDoge-WBNB\n",
-      "Simple Returns (native currency)\n",
-      "-0.04873059800264712\n",
-      "0.01   -0.005091\n",
-      "0.05   -0.005048\n",
-      "0.25   -0.000128\n",
-      "0.50    0.000000\n",
-      "0.75    0.000129\n",
-      "0.95    0.005085\n",
-      "0.99    0.005134\n",
-      "Name: return_native, dtype: float64\n",
-      "0.028076811172534244 \n",
-      "\n"
+      "SignificanceResult(statistic=59859026241.775314, pvalue=0.0)\n",
+      "ADF Statistic: -31.237717\n",
+      "p-value: 0.000000\n"
      ]
     }
    ],
@@ -1192,16 +1060,37 @@
     "    df = load_csv_to_df(file_path, verbose=False, name = name)\n",
     "    set_index(df, info=False)\n",
     "\n",
+    "    #printing info on column of a df\n",
+    "    #print(df.info())\n",
+    "\n",
+    "    ###############Basic block of plots\n",
     "    #Price plots\n",
-    "    #plot_price(df, native=True, name=name, ax=None, plot_both=True)\n",
+    "    # plot_price(df, native=True, name=name, ax=None, plot_both=True)\n",
     "  \n",
-    "    #adding retruns and plotting them\n",
+    "    # #adding retruns and plotting them\n",
+    "    # add_returns(df, price_col='price_native', ret_col='return_native', log_ret_col='log_return_native')\n",
+    "    # add_returns(df, price_col='price_USD', ret_col='return_USD', log_ret_col='log_return_USD')\n",
+    "    \n",
+    "    # #plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=True, bins=100)\n",
+    "    # plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=False, bins=100)\n",
+    "    # plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=True, bins=100)\n",
+    "    # print_stats(df, native=True, log=False, name=name)\n",
+    "    \n",
+    "    ##############Histograms with separate Buy/Sell groups\n",
+    "    #adding retruns and plotting them in histogram with buy/sell separated\n",
     "    add_returns(df, price_col='price_native', ret_col='return_native', log_ret_col='log_return_native')\n",
     "    add_returns(df, price_col='price_USD', ret_col='return_USD', log_ret_col='log_return_USD')\n",
-    "    \n",
-    "    #plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=True, bins=100)\n",
-    "    print_stats(df, native=True, log=False, name=name)\n",
-    "    \n",
+    "    # plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=True, bins=100, buy_only = False, sell_only = False)\n",
+    "    # plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=True, bins=100, buy_only = True, sell_only = False)\n",
+    "    # plot_returns(df, native=True, log=False, name=name, lower_percentile=0, higher_percentile=100, histogram=True, bins=100, buy_only = False, sell_only = True)\n",
+    "\n",
+    "    #print Jarque-Bera test -- H0: Skewness and Kurtosis match Normal distribution - strongly rejected\n",
+    "    print(stats.jarque_bera(df.return_native))\n",
+    "\n",
+    "    #print ADF (Augment Dickey-Fuller) -- H0: there is a unit root present (i.e. series is not stationary) - strongly rejected\n",
+    "    result = adfuller(df.return_native)\n",
+    "    print('ADF Statistic: %f' % result[0])\n",
+    "    print('p-value: %f' % result[1])\n",
     "    \n",
     "\n",
     "\n",
