Checking table, changing Fisher kurtosis to pearsons

--- a/Dextools/token_prices_analyzis.ipynb
+++ b/Dextools/token_prices_analyzis.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
     "    CV = std_dev/mean\n",
     "    maximum = df[column].max()\n",
     "    minimum = df[column].min()\n",
-    "    kurtosis = stats.kurtosis(df[column])\n",
+    "    kurtosis = stats.kurtosis(df[column], fisher=False)\n",
     "    skewness = stats.skew(df[column])\n",
     "    jarque_bera = stats.jarque_bera(df[column])[0]\n",
     "    adf = adfuller(df[column])[0]\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -387,16 +387,16 @@
       "9      VOLT-WBNB        18006  4.655294e-10  4.495000e-10  3.303562e-11   \n",
       "\n",
       "         CV       maximum       minimum  skewness  kurtosis  jarque_bera  \\\n",
-      "0  0.090472  4.122000e-04  2.214000e-04 -0.214957 -0.659457    95.357736   \n",
-      "1  0.147159  1.170000e-04  8.681000e-07  0.947621  0.688889  2464.305099   \n",
-      "2  0.155872  3.336000e-04  1.507000e-04  0.618720 -0.500013   663.448393   \n",
-      "3  0.020446  7.418000e-10  5.735000e-10  0.590322  2.611417  1626.941493   \n",
-      "4  0.187826  3.739000e-13  1.518000e-13  0.400999 -0.406916   145.243850   \n",
-      "5  0.094549  8.979000e-13  6.829000e-13  0.263261 -1.504166  1951.473587   \n",
-      "6  0.039227  1.225000e-08  1.010000e-08 -0.067486 -1.016968  1156.106867   \n",
-      "7  0.104738  1.887000e-02  1.164000e-02  0.870562 -0.212344   964.002249   \n",
-      "8  0.019260  1.568000e-03  1.433000e-03 -0.399063 -0.585527   493.557544   \n",
-      "9  0.070964  5.602000e-10  4.347000e-10  1.658784  1.439656  9812.413854   \n",
+      "0  0.090472  4.122000e-04  2.214000e-04 -0.214957  2.340543    95.357736   \n",
+      "1  0.147159  1.170000e-04  8.681000e-07  0.947621  3.688889  2464.305099   \n",
+      "2  0.155872  3.336000e-04  1.507000e-04  0.618720  2.499987   663.448393   \n",
+      "3  0.020446  7.418000e-10  5.735000e-10  0.590322  5.611417  1626.941493   \n",
+      "4  0.187826  3.739000e-13  1.518000e-13  0.400999  2.593084   145.243850   \n",
+      "5  0.094549  8.979000e-13  6.829000e-13  0.263261  1.495834  1951.473587   \n",
+      "6  0.039227  1.225000e-08  1.010000e-08 -0.067486  1.983032  1156.106867   \n",
+      "7  0.104738  1.887000e-02  1.164000e-02  0.870562  2.787656   964.002249   \n",
+      "8  0.019260  1.568000e-03  1.433000e-03 -0.399063  2.414473   493.557544   \n",
+      "9  0.070964  5.602000e-10  4.347000e-10  1.658784  4.439656  9812.413854   \n",
       "\n",
       "        ADF  \n",
       "0 -1.708306  \n",
@@ -631,38 +631,48 @@
      "output_type": "stream",
      "text": [
       "AGIX-WETH\n",
+      "SignificanceResult(statistic=23691.47689514092, pvalue=0.0)\n",
       "HEX-WETH\n",
+      "SignificanceResult(statistic=7994779.89000148, pvalue=0.0)\n",
       "OPTIMUS-WETH\n",
+      "SignificanceResult(statistic=72045.35240110793, pvalue=0.0)\n",
       "SHIB-WETH\n",
+      "SignificanceResult(statistic=3988.973652502272, pvalue=0.0)\n",
       "SHIK-WETH\n",
+      "SignificanceResult(statistic=117911.91146506641, pvalue=0.0)\n",
       "BabyDoge-WBNB\n",
+      "SignificanceResult(statistic=89886.38120613697, pvalue=0.0)\n",
       "FLOKI-WBNB\n",
+      "SignificanceResult(statistic=5360.09738863262, pvalue=0.0)\n",
       "INJ-WBNB\n",
+      "SignificanceResult(statistic=20243.899116241108, pvalue=0.0)\n",
       "MBOX-WBNB\n",
+      "SignificanceResult(statistic=117.8580788834195, pvalue=2.5553085412140028e-26)\n",
       "VOLT-WBNB\n",
-      "            name observations          mean       StD    median   maximum  \\\n",
-      "0      AGIX-WETH         5416 -4.846103e-05  0.004083  0.000000  0.034690   \n",
-      "1       HEX-WETH         4991  5.607362e-05  0.012248  0.000199  0.261426   \n",
-      "2   OPTIMUS-WETH         4964  2.313354e-06  0.011339  0.000000  0.154196   \n",
-      "3      SHIB-WETH         5208 -9.094539e-07  0.003550  0.000000  0.030364   \n",
-      "4      SHIK-WETH         5329 -4.358089e-05  0.011283  0.000000  0.141626   \n",
-      "5  BabyDoge-WBNB         4594  2.965869e-05  0.003547  0.000000  0.058492   \n",
-      "6     FLOKI-WBNB         4388 -7.053557e-06  0.003991  0.000000  0.024150   \n",
-      "7       INJ-WBNB         5210  4.318333e-05  0.004334  0.000000  0.050223   \n",
-      "8      MBOX-WBNB         4552 -2.042600e-06  0.003127  0.000000  0.021206   \n",
-      "9      VOLT-WBNB         4715 -3.890263e-05  0.003689  0.000000  0.025437   \n",
+      "SignificanceResult(statistic=7444.962085114934, pvalue=0.0)\n",
+      "            name observations          mean    median       StD           CV  \\\n",
+      "0      AGIX-WETH         5416 -4.846103e-05  0.000000  0.004083   -84.251413   \n",
+      "1       HEX-WETH         4991  5.607362e-05  0.000199  0.012248   218.431288   \n",
+      "2   OPTIMUS-WETH         4964  2.313354e-06  0.000000  0.011339  4901.335959   \n",
+      "3      SHIB-WETH         5208 -9.094539e-07  0.000000  0.003550 -3903.486679   \n",
+      "4      SHIK-WETH         5329 -4.358089e-05  0.000000  0.011283  -258.905109   \n",
+      "5  BabyDoge-WBNB         4594  2.965869e-05  0.000000  0.003547   119.590287   \n",
+      "6     FLOKI-WBNB         4388 -7.053557e-06  0.000000  0.003991  -565.765444   \n",
+      "7       INJ-WBNB         5210  4.318333e-05  0.000000  0.004334   100.359493   \n",
+      "8      MBOX-WBNB         4552 -2.042600e-06  0.000000  0.003127 -1530.865926   \n",
+      "9      VOLT-WBNB         4715 -3.890263e-05  0.000000  0.003689   -94.826602   \n",
       "\n",
-      "    minimum  skewness    kurtosis   jarque_bera        ADF  \n",
-      "0 -0.043198 -0.211168   10.237481  2.369148e+04 -32.650154  \n",
-      "1 -0.202094  3.847106  195.920754  7.994780e+06 -50.225062  \n",
-      "2 -0.081216  0.924270   18.571713  7.204535e+04 -64.153018  \n",
-      "3 -0.025481  0.158701    4.275701  3.988974e+03 -33.695914  \n",
-      "4 -0.112736  0.141023   23.042472  1.179119e+05 -21.224931  \n",
-      "5 -0.022052  1.398493   21.488643  8.988638e+04 -17.525204  \n",
-      "6 -0.042940 -0.350230    5.369004  5.360097e+03 -55.201015  \n",
-      "7 -0.030351  0.688801    9.558047  2.024390e+04 -30.501859  \n",
-      "8 -0.011170  0.166836    0.714184  1.178581e+02 -31.553097  \n",
-      "9 -0.040886 -0.529956    6.064031  7.444962e+03 -29.981720  \n"
+      "    maximum   minimum  skewness    kurtosis   jarque_bera        ADF  \n",
+      "0  0.034690 -0.043198 -0.211168   13.237481  2.369148e+04 -32.650154  \n",
+      "1  0.261426 -0.202094  3.847106  198.920754  7.994780e+06 -50.225062  \n",
+      "2  0.154196 -0.081216  0.924270   21.571713  7.204535e+04 -64.153018  \n",
+      "3  0.030364 -0.025481  0.158701    7.275701  3.988974e+03 -33.695914  \n",
+      "4  0.141626 -0.112736  0.141023   26.042472  1.179119e+05 -21.224931  \n",
+      "5  0.058492 -0.022052  1.398493   24.488643  8.988638e+04 -17.525204  \n",
+      "6  0.024150 -0.042940 -0.350230    8.369004  5.360097e+03 -55.201015  \n",
+      "7  0.050223 -0.030351  0.688801   12.558047  2.024390e+04 -30.501859  \n",
+      "8  0.021206 -0.011170  0.166836    3.714184  1.178581e+02 -31.553097  \n",
+      "9  0.025437 -0.040886 -0.529956    9.064031  7.444962e+03 -29.981720  \n"
      ]
     }
    ],
@@ -699,7 +709,7 @@
     "\n",
     "    ####################Test Statistics\n",
     "    ##print Jarque-Bera test -- H0: Skewness and Kurtosis match Normal distribution - strongly rejected\n",
-    "    # print(stats.jarque_bera(df_rescaled.return_native))\n",
+    "    #print(stats.jarque_bera(df_rescaled.return_native))\n",
     "\n",
     "    ##print ADF (Augment Dickey-Fuller) -- H0: there is a unit root present (i.e. series is not stationary) - strongly rejected\n",
     "    # result = adfuller(df_rescaled.return_native)\n",
@@ -717,6 +727,7 @@
     "\n",
     "\n",
     "    table = get_overview_table(df_rescaled, name=name, column = \"return_native\", table = table)\n",
+    "    #table = get_overview_table(df_rescaled, name=name, column = \"log_return_native\", table = table)\n",
     "\n",
     "\n",
     "    ##############ACF and PACF\n",
@@ -764,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
