--- a/Dextools/token_prices_analyzis.ipynb
+++ b/Dextools/token_prices_analyzis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
     "from statsmodels.stats.stattools import durbin_watson\n",
     "import matplotlib.dates as mdates\n",
+    "from arch.unitroot import PhillipsPerron\n",
     "\n",
     "# pair_list = [\n",
     "#             (\"SHIB-WETH\", \"https://www.dextools.io/app/en/ether/pair-explorer/0x811beed0119b4afce20d2583eb608c6f7af1954f\", 50),\n",
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -631,25 +632,305 @@
      "output_type": "stream",
      "text": [
       "AGIX-WETH\n",
-      "SignificanceResult(statistic=23691.47689514092, pvalue=0.0)\n",
+      "ADF Statistic: -32.650154 p-value: 0.000000\n",
+      "KPSS test statistic 0.020006253675952334 with p-value 0.1 on 23 lags.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic                -78.773\n",
+      "P-value                         0.000\n",
+      "Lags                               33\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n",
       "HEX-WETH\n",
-      "SignificanceResult(statistic=7994779.89000148, pvalue=0.0)\n",
+      "ADF Statistic: -50.225062 p-value: 0.000000\n",
+      "KPSS test statistic 0.16984585843604977 with p-value 0.1 on 32 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic               -113.879\n",
+      "P-value                         0.000\n",
+      "Lags                               32\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "OPTIMUS-WETH\n",
-      "SignificanceResult(statistic=72045.35240110793, pvalue=0.0)\n",
+      "ADF Statistic: -64.153018 p-value: 0.000000\n",
+      "KPSS test statistic 0.026714314137174018 with p-value 0.1 on 12 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic                -63.876\n",
+      "P-value                         0.000\n",
+      "Lags                               32\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "SHIB-WETH\n",
-      "SignificanceResult(statistic=3988.973652502272, pvalue=0.0)\n",
+      "ADF Statistic: -33.695914 p-value: 0.000000\n",
+      "KPSS test statistic 0.049373205658845745 with p-value 0.1 on 90 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic               -129.683\n",
+      "P-value                         0.000\n",
+      "Lags                               33\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "SHIK-WETH\n",
-      "SignificanceResult(statistic=117911.91146506641, pvalue=0.0)\n",
+      "ADF Statistic: -21.224931 p-value: 0.000000\n",
+      "KPSS test statistic 0.048862546877227214 with p-value 0.1 on 25 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic                -74.634\n",
+      "P-value                         0.000\n",
+      "Lags                               33\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "BabyDoge-WBNB\n",
-      "SignificanceResult(statistic=89886.38120613697, pvalue=0.0)\n",
+      "ADF Statistic: -17.525204 p-value: 0.000000\n",
+      "KPSS test statistic 0.794124054913349 with p-value 0.01 on 51 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic               -113.988\n",
+      "P-value                         0.000\n",
+      "Lags                               32\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2018: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is smaller than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "FLOKI-WBNB\n",
-      "SignificanceResult(statistic=5360.09738863262, pvalue=0.0)\n",
+      "ADF Statistic: -55.201015 p-value: 0.000000\n",
+      "KPSS test statistic 0.024863216231842747 with p-value 0.1 on 9 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic                -86.797\n",
+      "P-value                         0.000\n",
+      "Lags                               31\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "INJ-WBNB\n",
-      "SignificanceResult(statistic=20243.899116241108, pvalue=0.0)\n",
+      "ADF Statistic: -30.501859 p-value: 0.000000\n",
+      "KPSS test statistic 0.20650530294208685 with p-value 0.1 on 27 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic                -75.959\n",
+      "P-value                         0.000\n",
+      "Lags                               33\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "MBOX-WBNB\n",
-      "SignificanceResult(statistic=117.8580788834195, pvalue=2.5553085412140028e-26)\n",
+      "ADF Statistic: -31.553097 p-value: 0.000000\n",
+      "KPSS test statistic 0.0923437868789551 with p-value 0.1 on 64 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic               -135.662\n",
+      "P-value                         0.000\n",
+      "Lags                               32\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "VOLT-WBNB\n",
-      "SignificanceResult(statistic=7444.962085114934, pvalue=0.0)\n",
+      "ADF Statistic: -29.981720 p-value: 0.000000\n",
+      "KPSS test statistic 0.2915041309903824 with p-value 0.1 on 64 lags.\n",
+      "     Phillips-Perron Test (Z-tau)    \n",
+      "=====================================\n",
+      "Test Statistic               -130.163\n",
+      "P-value                         0.000\n",
+      "Lags                               32\n",
+      "-------------------------------------\n",
+      "\n",
+      "Trend: Constant\n",
+      "Critical Values: -3.43 (1%), -2.86 (5%), -2.57 (10%)\n",
+      "Null Hypothesis: The process contains a unit root.\n",
+      "Alternative Hypothesis: The process is weakly stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dokumenty\\Vejška\\Magisterské studium\\DIPLOMKA\\Code_and_Data\\Data_scraping\\DEX_data_scraper\\venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "            name observations          mean    median       StD           CV  \\\n",
       "0      AGIX-WETH         5416 -4.846103e-05  0.000000  0.004083   -84.251413   \n",
       "1       HEX-WETH         4991  5.607362e-05  0.000199  0.012248   218.431288   \n",
@@ -712,12 +993,16 @@
     "    #print(stats.jarque_bera(df_rescaled.return_native))\n",
     "\n",
     "    ##print ADF (Augment Dickey-Fuller) -- H0: there is a unit root present (i.e. series is not stationary) - strongly rejected\n",
-    "    # result = adfuller(df_rescaled.return_native)\n",
-    "    # print('ADF Statistic: %f' % result[0], 'p-value: %f' % result[1])\n",
+    "    result = adfuller(df_rescaled.return_native)\n",
+    "    print('ADF Statistic: %f' % result[0], 'p-value: %f' % result[1])\n",
     "\n",
     "    ##KPSS test for stationarity: H0 - The time series is trend stationary., H1 - not trend stationary. Failed to reject in all cases\n",
-    "    # kpss_result = kpss(df_rescaled.return_native)\n",
-    "    # print(f\"KPSS test statistic {kpss_result[0]} with p-value {kpss_result[1]} on {kpss_result[2]} lags.\")\n",
+    "    kpss_result = kpss(df_rescaled.return_native)\n",
+    "    print(f\"KPSS test statistic {kpss_result[0]} with p-value {kpss_result[1]} on {kpss_result[2]} lags.\")\n",
+    "\n",
+    "    ##PP test for stationarity: H - there is a unit root, H1: no unit root. Strongly rejected in all cases.\n",
+    "    pp_result = pp = PhillipsPerron(df_rescaled.return_native)\n",
+    "    print(pp.summary().as_text())\n",
     "\n",
     "    ##Durbin-Watson test of autocorrelation - H0 no autocorrelation, values around 2, H1 autocorrelation, close to 0 - positive, close to 4 negative\n",
     "    ##rule of thumb: test statistic values between the range of 1.5 and 2.5 are considered normal\n",
